syntax = "proto3";

import "bscp.io/pkg/protocol/core/base/base.proto";
import "bscp.io/pkg/protocol/core/config-item/config_item.proto";
import "bscp.io/pkg/protocol/core/content/content.proto";

package pbtr;

option go_package = "bscp.io/pkg/protocol/core/template-release;pbtr";

// Template source resource reference: pkg/dal/table/template_release.go
message TemplateRelease {
    uint32                    id         = 1;
    TemplateReleaseSpec       spec       = 2;
    TemplateReleaseAttachment attachment = 3;
    pbbase.CreatedRevision    revision   = 4;
}

// TemplateReleaseSpec source resource reference: pkg/dal/table/template_release.go
message TemplateReleaseSpec {
    string                release_name = 1;
    string                release_memo = 2;
    string                name         = 3;
    string                path         = 4;
    string                file_type    = 5; // file_type is enum type
    string                file_mode    = 6; // file_mode is enum type
    pbci.FilePermission   permission   = 7;
    pbcontent.ContentSpec content_spec = 8;
}

// TemplateReleaseAttachment source resource reference: pkg/dal/table/template_release.go
message TemplateReleaseAttachment {
    uint32 biz_id            = 1;
    uint32 template_space_id = 2;
    uint32 template_id       = 3;
}